@@ -1,8 +1,5 @@
 ## $Id$
 
-# https://sourceforge.net/tracker/?func=detail&atid=476037&aid=1981932&group_id=55124
-#MAKEFLAGS = -j1
-
 SUBDIRS = . BuzzMachineLoader
 
 lib_LTLIBRARIES = libbml.la
@@ -24,8 +21,7 @@ WRAPPER_LIBS = $(top_builddir)/dllwrapper2/libloader.la
 endif
 
 libbml_la_CFLAGS = $(BML_CFLAGS) $(ARCH_CFLAGS)
-libbml_la_LDFLAGS = -lm -lpthread -ldl
-libbml_la_LIBADD = $(BML_LIBS) $(WRAPPER_LIBS)
+libbml_la_LIBADD = -lm -lpthread -ldl $(BML_LIBS) $(WRAPPER_LIBS)
 
 bin_PROGRAMS=bmltest_info bmltest_process
 
