@@ -1,3 +1,10 @@
+2008-09-01  Stefan Kost  <ensonic@users.sf.net>
+
+	* Makefile.am:
+	* dllwrapper1/wine/Makefile.am:
+	* src/Makefile.am:
+	  Remove hack and move libs from LDFLAGS to LDADD to get deps right.
+
 2008-08-31  Stefan Kost  <ensonic@users.sf.net>
 
 	* TODO:
